--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -130,3 +130,20 @@ nslookup www.jd.com
 vlanif是一个三层逻辑端口，在二层网络中作为网关存在。
 vlan是二层概念，vlan互通需要三层通信，vlanif应被配置在这个三层网元上。
 二层交换机和三层交换机相连的端口属性要设置为Trunk且运行所有vlan通过；
+
+一、Access
+Access只能属于一个vlan，一般用来连接计算机的端口
+Access接受和转发的数据包必是无VID的数据包
+Access端口发送出去的数据包无VID，可被PC接受或access口接受。
+Access : 收到一个报文，先判断是否有vlan消息，无则打上端口的PVID在SW内转交给相同PVID的端口去掉标记的无VID数据包，有则直接丢弃。
+二、Trunk
+Trunk：可以允许多个vlan通过，可以接收和发送多个vlan的报文，一般用于交换机之间连接端口
+Trunk：默认PVID与vlan1相等
+在默认状态下，Trunk端口允许所有的Vlan发送和接口传输信息。
+Trunk：收到一个报文，先判断是否有vlan消息，无则打上端口的PVID在SW内转交给其它端口;有则先判断trunk端口是否允许该vlan的数据进入，如果可以则转发，否则丢弃。
+Trunk：在发送时，比较要发送报文的VID与端口的PVID，不相等则直接发送；相等则剥离VID，再发送
+三、区别：
+Access口只接收无VID的数据包。
+access口发送数据包时对所有数据包去除VID，而trunk口只对与自己端口的PVID相等的数据包去除VID，其它则直接转发。
+
+PVID英文为Port-base VLAN ID，是表示网络通信中基于端口的VLAN ID，一个端口可以属于多个VLAN，但是只能有一个PVID，收到一个不带tag头的数据包时，会打上PVID所表示的VLAN号，视同该VLAN的数据包处理。
