--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -147,3 +147,33 @@ Access口只接收无VID的数据包。
 access口发送数据包时对所有数据包去除VID，而trunk口只对与自己端口的PVID相等的数据包去除VID，其它则直接转发。
 
 PVID英文为Port-base VLAN ID，是表示网络通信中基于端口的VLAN ID，一个端口可以属于多个VLAN，但是只能有一个PVID，收到一个不带tag头的数据包时，会打上PVID所表示的VLAN号，视同该VLAN的数据包处理。
+
+
+
+## 交换机
+
+全双工，自动协商速率
+
+使用命令：
+
+```
+# 查看本地arp表内容
+arp -a
+# 交换机查看arp mac地址表
+sh mac-addres-table
+```
+
+mac 地址的老化时间300s
+
+### 二层转发：
+
+根据检测mac直接进行端口转发。
+
+#### 转发方式：
+
+1. ​	存储转发 完整收到帧 并检查无误之后转发。缺点是延迟较大且不固定，因为在转发之前要收到并处理完整的帧。
+
+2. 碎片隔离
+
+   
+
