--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -8,15 +8,24 @@
 
 ```
  @media screen and (max-width: 1366px) {
-
    .weeks-train{
-
-​    width: 66%;
-
+     width: 66%;
    }
-
   }
 ```
 
+## VUE
 
+### sass
 
+如果碰到其他的都安装成功为独[sass安装](https://so.csdn.net/so/search?q=sass安装&spm=1001.2101.3001.7020)失败
+
+```javascript
+npm config set sass_binary_site=https://npm.taobao.org/mirrors/node-sass
+```
+
+然后在安装一边sass
+
+```javascript
+npm install node-sass
+```
