--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -29,3 +29,34 @@ npm config set sass_binary_site=https://npm.taobao.org/mirrors/node-sass
 ```javascript
 npm install node-sass
 ```
+
+### Vue keep-alive后不能触发destroyed
+
+解决方法有2种
+
+1.直接调用deactivated
+
+ deactivated() {
+    clearInterval(this.timer)
+  },
+2.配合导航守卫，手动调用生命周期销毁函数
+
+beforeRouteLeave (to, from, next) {
+    this.destroy();
+    next();
+} 
+
+回来之后activated 不触发 ，是activated  而不是actived
+
+
+
+activated () {
+
+ console.log("activated调用了");
+
+ console.log("main page actived 99999.... ");
+
+
+
+},
+
