--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -2,9 +2,13 @@
 
 ## 1.介绍
 
+RabbitMQ的5大核心概念：Connection（连接）、Channel（信道）、Exchange（交换机）、Queue（队列）、Virtual host（虚拟主机）。
+
 ## 2.作用
 
 ## 3.优点
+
+
 
 ## 4.实现原理
 
@@ -82,6 +86,17 @@ yum install socat logrotate -y
 ## install RabbitMQ and zero dependency Erlang from the above repositories,
 ## ignoring any versions provided by the standard repositories
 yum install --repo rabbitmq_erlang --repo rabbitmq_server erlang rabbitmq-server -y
+
+Start the Server
+
+chkconfig rabbitmq-server on
+/sbin/service rabbitmq-server start
+
+/sbin/service rabbitmq-server status
+
+/sbin/service rabbitmq-server stop
+
+journalctl --system | grep rabbitmq
 ```
 
 
