--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -17,59 +17,106 @@ RabbitMQ的5大核心概念：Connection（连接）、Channel（信道）、Exc
 ```ini
 vi /etc/yum.repos.d/rabbitmq.repo
 
-[rabbitmq_erlang]
-name=rabbitmq_erlang
-baseurl=https://packagecloud.io/rabbitmq/erlang/el/8/$basearch
+
+[modern-erlang]
+name=modern-erlang-el8
+# uses a Cloudsmith mirror @ yum1.novemberain.com.
+# Unlike Cloudsmith, it does not have traffic quotas
+baseurl=https://yum1.novemberain.com/erlang/el/8/$basearch
 repo_gpgcheck=1
+enabled=1
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/gpg.E495BB49CC4BBE5B.key
 gpgcheck=1
-enabled=1
-# PackageCloud's repository key and RabbitMQ package signing key
-gpgkey=https://packagecloud.io/rabbitmq/erlang/gpgkey
-       https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
 metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+type=rpm-md
 
-[rabbitmq_erlang-source]
-name=rabbitmq_erlang-source
-baseurl=https://packagecloud.io/rabbitmq/erlang/el/8/SRPMS
+[modern-erlang-noarch]
+name=modern-erlang-el8-noarch
+# uses a Cloudsmith mirror @ yum1.novemberain.com.
+# Unlike Cloudsmith, it does not have traffic quotas
+baseurl=https://yum1.novemberain.com/erlang/el/8/noarch
 repo_gpgcheck=1
-gpgcheck=0
 enabled=1
-# PackageCloud's repository key and RabbitMQ package signing key
-gpgkey=https://packagecloud.io/rabbitmq/erlang/gpgkey
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/gpg.E495BB49CC4BBE5B.key
        https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+gpgcheck=1
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
 metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+type=rpm-md
+
+[modern-erlang-source]
+name=modern-erlang-el8-source
+# uses a Cloudsmith mirror @ yum1.novemberain.com.
+# Unlike Cloudsmith, it does not have traffic quotas
+baseurl=https://yum1.novemberain.com/erlang/el/8/SRPMS
+repo_gpgcheck=1
+enabled=1
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/gpg.E495BB49CC4BBE5B.key
+       https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+gpgcheck=1
+sslverify=1
+sslcacert=/etc/pki/tls/certs/ca-bundle.crt
+metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+
 
 ##
-## RabbitMQ server
+## RabbitMQ Server
 ##
 
-[rabbitmq_server]
-name=rabbitmq_server
-baseurl=https://packagecloud.io/rabbitmq/rabbitmq-server/el/8/$basearch
+[rabbitmq-el8]
+name=rabbitmq-el8
+baseurl=https://yum1.novemberain.com/rabbitmq/el/8/$basearch
 repo_gpgcheck=1
-gpgcheck=0
 enabled=1
-# PackageCloud's repository key and RabbitMQ package signing key
-gpgkey=https://packagecloud.io/rabbitmq/rabbitmq-server/gpgkey
+# Cloudsmith's repository key and RabbitMQ package signing key
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-server/gpg.9F4587F226208342.key
        https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+gpgcheck=1
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
 metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+type=rpm-md
 
-[rabbitmq_server-source]
-name=rabbitmq_server-source
-baseurl=https://packagecloud.io/rabbitmq/rabbitmq-server/el/8/SRPMS
+[rabbitmq-el8-noarch]
+name=rabbitmq-el8-noarch
+baseurl=https://yum1.novemberain.com/rabbitmq/el/8/noarch
 repo_gpgcheck=1
-gpgcheck=0
 enabled=1
-gpgkey=https://packagecloud.io/rabbitmq/rabbitmq-server/gpgkey
+# Cloudsmith's repository key and RabbitMQ package signing key
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-server/gpg.9F4587F226208342.key
+       https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+gpgcheck=1
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
 metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+type=rpm-md
+
+[rabbitmq-el8-source]
+name=rabbitmq-el8-source
+baseurl=https://yum1.novemberain.com/rabbitmq/el/8/SRPMS
+repo_gpgcheck=1
+enabled=1
+gpgkey=https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-server/gpg.9F4587F226208342.key
+gpgcheck=0
+sslverify=1
+sslcacert=/etc/pki/tls/certs/ca-bundle.crt
+metadata_expire=300
+pkg_gpgcheck=1
+autorefresh=1
+type=rpm-md
 ```
 
 #### Red Hat 8, CentOS Stream, CentOS 8, Modern Fedora
@@ -77,6 +124,18 @@ metadata_expire=300
 
 
 ```bash
+yum 方式报错直接下载安装包
+
+https://github.com/rabbitmq/rabbitmq-server/releases/tag/v3.11.0
+下载安装包
+
+https://packagecloud.io/rabbitmq/erlang/install#bash-rpm
+安装erlang
+curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | sudo bash
+
+
+
+
 yum update -y
 yum -q makecache -y --disablerepo='*' --enablerepo='rabbitmq_erlang' --enablerepo='rabbitmq_server'
 
@@ -85,7 +144,7 @@ yum install socat logrotate -y
 
 ## install RabbitMQ and zero dependency Erlang from the above repositories,
 ## ignoring any versions provided by the standard repositories
-yum install --repo rabbitmq_erlang --repo rabbitmq_server erlang rabbitmq-server -y
+yum install --repo rabbitmq_erlang --repo rabbitmq_server erlang  -y
 
 Start the Server
 
@@ -97,6 +156,27 @@ chkconfig rabbitmq-server on
 /sbin/service rabbitmq-server stop
 
 journalctl --system | grep rabbitmq
+
+whereis  rabbitmq
+rabbitmq: /usr/lib/rabbitmq /etc/rabbitmq
+切换至/usr/lib/rabbitmq 
+
+开启UI
+rabbitmq-plugins enable rabbitmq_management
+
+RabbitMQ登录提示User can only log in via localhost
+#第一步：添加 admin 用户并设置密码
+rabbitmqctl add_user admin 123456
+#第二步：添加 admin 用户为administrator角色
+rabbitmqctl set_user_tags admin administrator
+#第三步：设置 admin 用户的权限，指定允许访问的vhost以及write/read
+rabbitmqctl set_permissions -p "/" admin ".*" ".*" ".*"
+#第四步：查看vhost（/）允许哪些用户访问
+rabbitmqctl list_permissions -p /
+#第五步：查看用户列表
+rabbitmqctl list_users
+#第六步：重启RabbitMQ,然后用设置账户和密码登录。
+
 ```
 
 
