--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -4,6 +4,8 @@
 
 RabbitMQ的5大核心概念：Connection（连接）、Channel（信道）、Exchange（交换机）、Queue（队列）、Virtual host（虚拟主机）。
 
+
+
 ## 2.作用
 
 ## 3.优点
@@ -13,6 +15,10 @@ RabbitMQ的5大核心概念：Connection（连接）、Channel（信道）、Exc
 ## 4.实现原理
 
 ## 5.安装
+
+下载地址
+
+https://packagecloud.io/rabbitmq/erlang
 
 ```ini
 vi /etc/yum.repos.d/rabbitmq.repo
@@ -184,6 +190,8 @@ rabbitmqctl list_users
 
 
 ## 6.使用
+
+http://192.168.182.142:15672/#/
 
 ## 7.常见问题
 
