--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -30,7 +30,7 @@ npm config set sass_binary_site=https://npm.taobao.org/mirrors/node-sass
 npm install node-sass
 ```
 
-### Vue keep-alive后不能触发destroyed
+### 1.Vue keep-alive后不能触发destroyed
 
 解决方法有2种
 
@@ -59,4 +59,6 @@ activated () {
 
 
 },
+
+### 2.获取视频第一帧
 
