--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -193,6 +193,28 @@ rabbitmqctl list_users
 
 http://192.168.182.142:15672/#/
 
+
+
+java client 
+
+```
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.17.0</version>
+        </dependency>
+```
+
+
+
+
+
+
+
+
+
+
+
 ## 7.常见问题
 
 ## 8.参考资料
