--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -2,17 +2,47 @@
 
 ## 1.介绍
 
+![](images\rabitmq_arc.png)
+
 RabbitMQ的5大核心概念：Connection（连接）、Channel（信道）、Exchange（交换机）、Queue（队列）、Virtual host（虚拟主机）。
 
+AMQP（Advanced Message Queuing Protocol）
+高级消息队列协议，也是一个消息代理的规范，兼容JMS，RabbitMQ是AMQP的实现
 
+
+
+#### Connection（连接）
+
+一个客户端连接
+
+#### Channel（信道）
+
+
+
+#### Exchange（交换机）
+
+交换器，用来接收生产者发送的消息并将这些消息路由给服务器中的队列。
+Exchange有4种类型：direct(默认)，fanout, topic, 和headers，不同类型的Exchange转发消息的策略有所区别
+
+#### Queue（队列）
+
+#### Virtual host（虚拟主机）
+
+#### Broker
 
 ## 2.作用
+
+### 2.1 如何保证消息不丢失
+
+
 
 ## 3.优点
 
 
 
 ## 4.实现原理
+
+
 
 ## 5.安装
 
