--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -50,9 +50,19 @@ x-mactch=all或者x_match=any），只有请求头与消息头匹配，才能接
 
 如何绑定？bindkey怎么设置
 
+Binding(绑定)，它的作用就是把exchange和queue按照路由规则绑定起来。
+
 #### Queue（队列）
 
+
+
 #### Virtual host（虚拟主机）
+
+
+
+vhost 可以理解为虚拟 broker ，即 mini-RabbitMQ server。其内部均含有独立的 queue、exchange 和 binding 等，但最最重要的是，其拥有独立的权限系统，可以做到 vhost 范围的用户控制。当然，从 RabbitMQ 的全局角度，vhost 可以作为不同权限隔离的手段（一个典型的例子就是不同的应用可以跑在不同的 vhost 中）
+
+
 
 #### Broker
 
@@ -319,6 +329,12 @@ java client
 
 
 
+6.1 如何发送消息
+
+
+
+6.2 如何消费消息
+
 
 
 
@@ -328,5 +344,13 @@ java client
 
 
 ## 7.常见问题
+
+### 7.1 vhost testhost not found, class-id=10, method-
+
+登录后台点击admin查看
+
+vhosts拒绝guest用户。
+在Admin中查看vhosts，只有一个“/”
+将项目中的配置改为"/"即可
 
 ## 8.参考资料
