--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -353,3 +353,33 @@ public abstract class AbstractSwagger2 {
 #### 4.1.19、消息管理。
 
 #### 4.1.20、工作流。
+
+
+
+
+
+## 5 架构师素养
+
+**（1） 架构师需要写代码吗？**
+
+有时间的话，亲自去写核心代码，如果没有时间的话，要把关详细设计并安排资深工程师去做CodeReview
+
+**（2）对于新技术，持什么样的态度？**
+
+需要去学习，但应用到线上一定要慎重
+
+**（3）对架构师的能力要求？**
+
+π型人才，除了技术宽度，还要有两条腿：一条是专业能力，还有一条是通用能力
+
+**（4）架构师三个阶段？**
+
+打基本功，业务沉淀，通用素质进阶
+
+**（5）好的架构的标准？**
+
+能够满足业务的需求并且对它的扩展性多考虑一步
+
+**（6）技术氛围怎么培养？**
+
+指导人机制，技术评审，技术分享
