--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -1,3 +1,21 @@
+# 消息中间件
+
+MQ要想尽量消息必达，架构上有两个核心设计点：
+
+（1）**消息落地**
+
+（2）**消息超时、重传、确认**
+
+消息总线是系统之间的解耦利器，但切勿滥用，消息总线为了尽量保证消息必达，架构设计方向为：
+
+（1）**消息收到先落地**
+
+（2）**消息超时、重传、确认保证消息必达**
+
+
+
+
+
 # Rabbit MQ相关
 
 ## 1.介绍
@@ -89,6 +107,10 @@ channel.basicPublish("", queueName, MessageProperties.PERSISTENT_TEXT_PLAIN, msg
 **注意：一旦创建了队列和交换机，就不能修改其标志了。例如创建了一个non-durable的队列，然后想把它改变成durable的，唯一的办法就是删除这个队列然后重新创建。
 
 ## 3.优点
+
+延时队列
+
+
 
 
 
