--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -1,2 +1,12 @@
 # 分布式
 
+1. ## id的生成
+
+   这就引出了记录标识生成（也就是上文提到的三个XXX-id）的两大核心需求：
+
+   （1）全局唯一
+
+   （2）趋势有序
+
+   **【常见方法一：使用数据库的 auto_increment 来生成全局唯一递增ID】**
+
