--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -10,3 +10,42 @@
 
    **【常见方法一：使用数据库的 auto_increment 来生成全局唯一递增ID】**
 
+   
+
+   **常见方法二：单点批量ID生成服务**
+
+   
+
+   **常见方法三：uuid**
+
+   **优点**：
+
+   （1）本地生成ID，不需要进行远程调用，时延低
+
+   （2）扩展性好，基本可以认为没有性能上限
+
+   **缺点**：
+
+   （1）无法保证趋势递增
+
+   （2）uuid过长，往往用字符串表示，作为主键建立索引查询效率低，常见优化方案为“转化为两个uint64整数存储”或者“折半存储”（折半后不能保证唯一性）
+
+**常见方法四：取当前毫秒数**
+
+uuid是一个本地算法，生成性能高，但无法保证趋势递增，且作为字符串ID检索效率低，有没有一种能保证递增的本地算法呢？
+
+取当前毫秒数是一种常见方案：uint64 ID = GenTimeMS();
+
+**优点**：
+
+（1）本地生成ID，不需要进行远程调用，时延低
+
+（2）生成的ID趋势递增
+
+（3）生成的ID是整数，建立索引后查询效率高
+
+**缺点**：
+
+（1）如果并发量超过1000，会生成重复的ID
+
+我去，这个缺点要了命了，不能保证ID的唯一性。当然，使用微秒可以降低冲突概率，但每秒最多只能生成1000000个ID，再多的话就一定会冲突了，所以使用微秒并不从根本上解决问题
