--- a/架构设计/方案设计.md
+++ b/架构设计/方案设计.md
@@ -14,4 +14,4 @@
 
 1. 客户端怎么优化（浏览器层，APP层）， 限制点击次数，减少请求发送
 2. 面对同一个用户多个请求，限制一个用户5秒之内有一个有效请求
-3. 如果有多个用户同时进来，把已经进来的请求做队列，根据订单数下放请求，
+3. 如果有多个用户同时进来，把已经进来的请求做队列，根据订单数下放请求，多的请求不需要透传下去
