--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -62,3 +62,26 @@ activated () {
 
 ### 2.获取视频第一帧
 
+### 3.自定义指令
+
+```
+Vue.directive('hasrole', {
+  // bind 第一次绑定到元素时调用
+  inserted :function(el, bindings) {
+    if (Vue.prototype.useroles.indexOf(bindings.expression) < 0) {
+      el.parentNode.removeChild(el);
+    }
+  }
+}) 
+
+数组中找某个元素 使用  .indexOf  -1 不存在
+.includes  true 存在
+
+
+bind  方法有找不到父节点的问题
+```
+
+
+
+
+
