--- a/架构设计/方案设计.md
+++ b/架构设计/方案设计.md
@@ -15,3 +15,9 @@
 1. 客户端怎么优化（浏览器层，APP层）， 限制点击次数，减少请求发送
 2. 面对同一个用户多个请求，限制一个用户5秒之内有一个有效请求
 3. 如果有多个用户同时进来，把已经进来的请求做队列，根据订单数下放请求，多的请求不需要透传下去
+
+## 4.消息的幂等
+
+1.发送消息时需要一个全局唯一的msgid，需要根据msgid 去重，保证消息发送的唯一性，启用ack等消息发送确认机制，保证消息正确投递。
+
+2.消费消息：消息中需要一个业务唯一的id保证去重。
