--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -14,6 +14,37 @@
   }
 ```
 
+1.2 子元素样式
+
+li:nth-child(3){    color: blue; }
+
+& 表示嵌套的上一级
+
+```
+      &:nth-child(2) {
+        p {
+          
+          color: #e4fb25;
+        }
+      }
+      &:first-child {
+        margin: 0;
+        p {
+          color: #26ff69;
+        
+        }
+      }
+      &:last-child {
+        p {
+          color: #ff5858;
+        }
+      }
+```
+
+
+
+
+
 ## VUE
 
 ### sass
