--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -1,34 +1,34 @@
 # 分布式
 
-1. ## id的生成
+## 1. id的生成
 
-   这就引出了记录标识生成（也就是上文提到的三个XXX-id）的两大核心需求：
+这就引出了记录标识生成（也就是上文提到的三个XXX-id）的两大核心需求：
 
-   （1）全局唯一
+（1）全局唯一
 
-   （2）趋势有序
+（2）趋势有序
 
-   **【常见方法一：使用数据库的 auto_increment 来生成全局唯一递增ID】**
+**【常见方法一：使用数据库的 auto_increment 来生成全局唯一递增ID】**
 
-   
 
-   **常见方法二：单点批量ID生成服务**
 
-   
+**常见方法二：单点批量ID生成服务**
 
-   **常见方法三：uuid**
 
-   **优点**：
 
-   （1）本地生成ID，不需要进行远程调用，时延低
+**常见方法三：uuid**
 
-   （2）扩展性好，基本可以认为没有性能上限
+**优点**：
 
-   **缺点**：
+（1）本地生成ID，不需要进行远程调用，时延低
 
-   （1）无法保证趋势递增
+（2）扩展性好，基本可以认为没有性能上限
 
-   （2）uuid过长，往往用字符串表示，作为主键建立索引查询效率低，常见优化方案为“转化为两个uint64整数存储”或者“折半存储”（折半后不能保证唯一性）
+**缺点**：
+
+（1）无法保证趋势递增
+
+（2）uuid过长，往往用字符串表示，作为主键建立索引查询效率低，常见优化方案为“转化为两个uint64整数存储”或者“折半存储”（折半后不能保证唯一性）
 
 **常见方法四：取当前毫秒数**
 
