--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -75,3 +75,22 @@ BASE是Basically Available（基本可用）、Soft state（软状态）和Event
 - 最终一致性（Eventually Consistent）
 
   最终一致性强调的是所有的数据副本，在经过一段时间的同步之后，最终都能够达到一个一致的状态
+
+## 3.分布式一致性协议
+
+- 两阶段提交协议(2PC)
+
+  - 第一阶段（投票阶段） 协调者节点向所有参与者节点询问是否可以执行提交操作，并开始等待各参与者节点的响应,各参与者节点响应协调者节点发起的询问，如果参与者节点的事务操作实际执行成功，则它返回一个"同意"消息；
+    如果参与者节点的事务操作实际执行失败，则它返回一个"中止"消息
+  - 第二阶段（提交执行阶段）：当协调者节点从所有参与者节点获得的相应消息都为"同意"时,协调者节点向所有参与者节点发出"正式提交"的请求
+  - 缺点：
+    - 资源被同步阻塞：
+    - 在数据提交的过程中，所有参与处理的服务器都处于阻塞状态，如果其他线程想访问临界区的资源，需要等待该条会话请求在本地执行完成后释放临界区资源。因此，采用二阶段提交算法也会降低程序并发执行的效率
+
+- 三阶段提交协议(3PC)
+
+- TCC
+
+- 最终一致性模式
+
+  
