--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -91,7 +91,22 @@ BASE是Basically Available（基本可用）、Soft state（软状态）和Event
 
 - 三阶段提交协议(3PC)
 
+  - 第一个阶段拆分成了两步：询问，然后再锁资源，最后真正提交。
+  - 一旦进入阶段3，发生 协调者出现问题 或 协调者和参与者之间的网络出现故障，即参与者无法及时接收到来自协调者的 DoCommit 或 abort 请求，针对这种异常情况，参与者都会在等待超时之后，继续进行事务提交
+  - 缺点：参与者接收到 PreCommit 消息后，如果网络出现分区，此时协调者和部分参与者无法进行正常的网络通信，该部分参与者依然会进行事务的提交，必然出现数据的不一致性。
+
 - TCC
+
+  - TCC 将事务的提交过程分为 try-confirm-cancel(实际上 TCC 就是 try、confirm、cancel 的简称) 三个阶段:
+    - try：完成业务检查、预留业务资源
+    - confirm：使用预留的资源执行业务操作（需要保证幂等性）
+    - cancel：取消执行业务操作，释放预留的资源（需要保证幂等性）
+  - 流程如下：
+    - 事务发起方向事务协调器发起事务请求，事务协调器调用所有事务参与者的 try 方法完成资源的预留，这时候并没有真正执行业务，而是为后面具体要执行的业务预留资源，这里完成了一阶段。
+    - 如果事务协调器发现有参与者的 try 方法预留资源时候发现资源不够，则调用参与方的 cancel 方法回滚预留的资源，需要注意 cancel 方法需要实现业务幂等，因为有可能调用失败（比如网络原因参与者接受到了请求，但是由于网络原因事务协调器没有接受到回执）会重试。
+    - 如果事务协调器发现所有参与者的 try 方法返回都 OK，则事务协调器调用所有参与者的 confirm 方法，不做资源检查，直接进行具体的业务操作。
+    - 如果协调器发现所有参与者的 confirm 方法都 OK 了，则分布式事务结束。
+    - 如果协调器发现有些参与者的 confirm 方法失败了，或者由于网络原因没有收到回执，则协调器会进行重试。这里如果重试一定次数后还是失败，常见的是做事务补偿。
 
 - 最终一致性模式
 
