--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -107,7 +107,18 @@ BASE是Basically Available（基本可用）、Soft state（软状态）和Event
     - 如果事务协调器发现所有参与者的 try 方法返回都 OK，则事务协调器调用所有参与者的 confirm 方法，不做资源检查，直接进行具体的业务操作。
     - 如果协调器发现所有参与者的 confirm 方法都 OK 了，则分布式事务结束。
     - 如果协调器发现有些参与者的 confirm 方法失败了，或者由于网络原因没有收到回执，则协调器会进行重试。这里如果重试一定次数后还是失败，常见的是做事务补偿。
+  - 总结一下，相比于二阶段提交协议，TCC 主要有以下区别：
+    - 2PC 位于资源层而 TCC 位于服务层。
+    - 2PC 的接口由第三方厂商实现，TCC 的接口由开发人员实现。
+    - TCC 可以更灵活地控制资源锁定的粒度。
+    - TCC 对应用的侵入性强。业务逻辑的每个分支都需要实现 try、confirm、cancel 三个操作，应用侵入性较强，改造成本高。
+  - 目前TCC的实现有如下几个
+    - tcc-transaction：
+    - ByteTCC
+    - spring-cloud-rest-tcc
 
 - 最终一致性模式
+
+  - 缓存一致性模式
 
   
