--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -114,5 +114,10 @@ bind  方法有找不到父节点的问题
 
 
 
+4. 文件下载进度条
 
+lengthComputable 始终为 false  ，需要再服务器侧添加contentlenth属性
 
+```
+response.setContentLength((int) file.length());
+```
