--- a/考研/专业.md
+++ b/考研/专业.md
@@ -1,7 +1,19 @@
-中国考研网  信息权威 择校技巧 就业方向指导 
+计算机408考研科目是全国统考
 
-中国研究生考研网
 
-考研历年真题库
 
-考研论坛
+**计算机408考研内容**
+
+**1数据结构考试内容**
+
+
+
+**2计算机组成原理考试内容**
+
+
+
+**3操作系统考研考试内容**
+
+
+
+**4计算机网络考试内容**
