--- a/算法/数据结构.md
+++ b/算法/数据结构.md
@@ -1,1 +1,27 @@
 # Java 数据结构 
+
+# C语言 数据结构
+
+## 线性表
+
+## 栈和队列
+
+## 串
+
+
+##  数组和广义表
+
+
+## 树和二叉树
+
+## 图
+
+##  动态存储
+
+## 查找
+
+## 内部排序
+
+## 外部排序
+
+
