--- a/算法/数据结构.md
+++ b/算法/数据结构.md
@@ -12,6 +12,30 @@
 
 ## 栈和队列
 
+
+
+队列： 顺序结构的队列，实现方式，数组，头尾指针变量。
+
+队空：前后指针相等
+
+队满：添加一个size ，或者 尾指针-1 是否等于头指针
+
+
+
+双端队列：双端队列是指允许两端都可以进行入队和出队操作的队列。其元素的逻辑结构仍是线性结构。将队列的两端分别称为前端和后端，两端都可以入队和出队。
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## 串
 
 
@@ -29,5 +53,4 @@
 ## 内部排序
 
 ## 外部排序
-
 
