--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -131,6 +131,26 @@ response.setContentLength((int) file.length());
 let geturl = window.location.href;
 let getqyinfo = geturl.split('?')[1] 
 decodeURIComponent(param.split('=')[1].replace(/%20/g, '+')
+
+
+    // let ts =0;
+
+    // let app_token = '';
+    // if(params.length > 0){
+
+    //     for(var i=0; i< params.length;i++){
+
+    //         let param = params[i];
+
+    //         if(param.indexOf('ts')>=0){
+    //              ts = param.split('=')[1];
+    //         }
+    //         if(param.indexOf('app_token')>=0){
+    //             app_token =  decodeURIComponent(param.split('=')[1].replace(/%20/g, '+')) ;
+    //         }
+    //     }
+
+    // }
 ```
 
 
