--- a/算法/数据结构.md
+++ b/算法/数据结构.md
@@ -41,8 +41,22 @@
 
 ##  数组和广义表
 
-
 ## 树和二叉树
+
+### 二叉树定义
+
+二叉树是n(n>0)个结点的有限集，它或为空树(n=0)，或由一个根结点和两棵分别称为左子树和右子树的互不相交的二叉树构成。
+
+**特点:**
+
+1. 每个结点至多有二棵子树(即不存在度大于2的结点)
+2. 二叉树的子树有左、右之分，且其次序不能任意颠倒
+
+
+
+满二叉树：一棵深度为k，且有2k-1个结点
+
+
 
 ## 图
 
