--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -108,6 +108,36 @@ E类：224-239 240.0.0.1～255.255.255.254
 
 判断一个地址能不能用：主机位不能全为0或者全为255
 
+
+
+IP地址子网掩码判断：
+
+202.101.35.45/27 根据/27 可知道网络位为27位 即主机位为32-27=5位
+子网数为 2^3=8个
+每个子网中的主机数有2^5=32个主机 去掉全0和全1 剩余30个主机
+由此可知 子网中的主机块范围是
+0-31（本地网络去除）
+31-63
+64-95
+96-127
+128-159
+160-191
+192-223
+224-255 （子网广播去除）
+除去网络位中和主机位中全0和全1的地址，实际可以应用的地址是：
+子网1 33～62
+子网2 65～94
+子网3 97～126
+子网4 129～158
+子网5 161～190
+子网6 193～222
+由此可判断同此ip同一子网的应该是
+202.101.35.60/27
+
+
+
+
+
 ### 域名
 定级域名 296
 
