--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -16,7 +16,34 @@
 - 分组封装格式
 - 分组转发规则
 
-### 路由协议
+### PPP 协议
+
+PPP点到点协议工作于OSI参考模型的二层（数据链路层）
+
+2.这种链路提供全双工操作，并按照顺序传递数据包。
+
+3.设计目的主要是用来通过拨号或专线方式建立点对点连接发送数据，使其成为各种主机、网桥和路由器之间简单连接的一种共通的解决方案。
+
+**4.PPP链路的建立：**
+LCP即链路控制协议，用于建立和维护点到点链路
+NCP即网络控制协议，用于建立和配置网络层协议
+
+### 数据帧
+
+**MTU 是指数据链路层能够传输的最大数据帧的大小（以字节为单位）**
+
+
+
+以太网数据帧最短帧长涉及到[CSMA](https://so.csdn.net/so/search?q=CSMA&spm=1001.2101.3001.7020)/CD机制
+
+原因是当数据帧到达网卡时，在物理层上网卡要先去掉前导同步码和帧开始定界符，然后对帧进行CRC检验，如果帧校验和错，就丢弃此帧。如 果校验和正确，就判断帧的目的硬件地址是否符合自己的接收条件（目的地址是自己的物理硬件地址、广播地址、可接收的多播硬件地址等），如果符合，就将帧交 “设备驱动程序”做进一步处理。这时我们的抓包软件才能抓到数据，因此，抓包软件抓到的是去掉前导同步码、帧开始分界符、FCS之外的数据，其最大值是 6＋6＋2＋1500＝1514。
+
+以太网规定，以太网帧数据域部分最小为46字节，也就是以太网帧最小是 6＋6＋2＋46＋4＝64。除去4个字节的FCS，因此，抓包时就是60字节。当数据字段的长度小于46字节时，MAC子层就会在数据字段的后面填充以 满足数据字段到46字节。
+
+总结：
+如果MTU是最小的46，则抓包长度是6+6+2+46=60，即最小抓包长度是60
+如果MTU是最大的1500，则抓包长度是6+6+2+1500=1514，即最小抓包长度是60
+
 路由协议是指定数据包转送数据包转送方式的网上协议。
 常见协议有：RIP，IGRP，EIGRP，
 无冲突协议： 令牌协议
@@ -103,7 +130,7 @@ port link-type access
 A类：1-126 子网掩码 255.0.0.0
 B类：128-191 默认子网掩码 255.255.0.0
 C类：192-223 默认子网掩码 255.255.255.0
-D类：224-239  224.0.0.1～239.255.255.254
+D类：224-239  224.0.0.1～239.255.255.254   支持多播
 E类：224-239 240.0.0.1～255.255.255.254
 
 判断一个地址能不能用：主机位不能全为0或者全为255
