--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -17,9 +17,18 @@
 
 表示层：数据格式转换、数据加密解密、数据压缩和恢复
 
-会话层：
+会话层： 表示实体和用户建立连接并在连接上有序的传输数据。
 
+传输层：端到端的通信
 
+​	功能
+
+1. ​	可靠传输、不可靠传输
+2. 差错控制
+3. 流量控制
+4. 服用分用
+
+​		
 
 
 
