--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -21,7 +21,15 @@
 
 
 
+STP生成树的生成过程大概如下：
 
+1、选举根桥（Root Bridge）
+
+2、选举根端口（Root Port）
+
+3、选举指定端口（Designated Port）
+
+4、阻塞备用端口（Blocking Port）
 
 ### HDLC 
 
