--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -41,6 +41,17 @@
 - 分组封装格式
 - 分组转发规则
 
+网络层：
+
+​	主要任务是把分组从源端传到目的端，为分组交换网上的不同主机提供通信服务。网络层传输单位是 数据包。
+
+
+
+- 路由选择
+- 流量控制
+- 差错控制
+- 拥塞控制
+
 ### PPP 协议
 
 PPP点到点协议工作于OSI参考模型的二层（数据链路层）
