--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -127,6 +127,9 @@ NCP即网络控制协议，用于建立和配置网络层协议
 **MTU 是指数据链路层能够传输的最大数据帧的大小（以字节为单位）**
 
 
+基带信号：数字1和0直接用两种不同的电压表示，再送到数字信道上去 
+
+宽带信号：将基带信号调制成的频分复用模拟信号
 
 以太网数据帧最短帧长涉及到[CSMA](https://so.csdn.net/so/search?q=CSMA&spm=1001.2101.3001.7020)/CD机制
 
