--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -82,6 +82,9 @@ DIS和DR与所路由器互相都是邻接关系
 BGP是一种另外的网关协议，可以做到路由优选、避免路由环路、更高效率传递路由和维护大量的路由信息。
 
 https://blog.csdn.net/u012451051/article/details/125397172
+AS之间正常存在大量的BGP邻居关系，且BGP协议不会计算最佳路径；因此在BGP协议中管理员需要进行策略来干涉选路;
+
+
 
 
 
