--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -85,7 +85,11 @@ https://blog.csdn.net/u012451051/article/details/125397172
 AS之间正常存在大量的BGP邻居关系，且BGP协议不会计算最佳路径；因此在BGP协议中管理员需要进行策略来干涉选路;
 
 
-
+2.解决方法
+1、物理、逻辑拓扑全连 – 物理链路直连、或者vpn
+2、邻居关系全连 – 网络中所有设备运行BGP
+3、BGP重发布到IGP（LAB）
+4、MPLS 多协议标签交换— 推荐做法
 
 
 ### HDLC 
