--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -92,6 +92,14 @@ AS之间正常存在大量的BGP邻居关系，且BGP协议不会计算最佳路
 
 
 
+BGP对等体：两个建立BGP会话（BGP的会话是基于TCP建立的）的路由器互为BGP对等体，BGP对等体之间可以交换路由表；
+
+
+
+BGP对等体分类：
+
+
+
 ### HDLC 
 
 ### TCP IP 协议
