--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -182,6 +182,11 @@ RFID：是什么？
 
 # WLAN
 
+1.CSS集群最多支持两台交换机
+2.堆叠系统中，主交换机负责管理整个堆叠系统
+3.堆叠技术可以简化网络拓扑，使网络结构变得更简单
+4.iStack最多支持9台交换机做堆叠
+
 
 
 MAC 是确定网络设备身份，
