--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -85,11 +85,13 @@ activated () {
 
  console.log("activated调用了");
 
- console.log("main page actived 99999.... ");
-
-
+ console.log("main page actived 99999.... ")
 
 },
+
+vue 点击编辑，使用model作为数据源， 同时ref也使用相同的名称会造成，列表中的数据被覆盖，导致点击的时候会出现页面上的行被修改了。
+
+
 
 ### 2.获取视频第一帧
 
