--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -208,6 +208,13 @@ public class RestVO<T> {
 }
  ```
 
+pre_acrch 
+
+- 需求结构化
+- 分析约束影响
+- 确定关键质量
+- 确定关键功能
+
 #### 4.1.4、异常处理统一规范：
 
 ​      基础框架组件需要对异常进行统一处理，规范异常处理的行为。这样各个具体项目基于这个框架组建开，减少重复造轮子。
