--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -208,11 +208,21 @@ public class RestVO<T> {
 }
  ```
 
-pre_acrch 
+pre_acrch : 架构设计的最前期阶段
 
 - 需求结构化
 - 分析约束影响
 - 确定关键质量
+  - 分类合适 + 必要扩充
+    - 持续可用性
+      - 可靠性
+      - 安全性
+      - 可维护性
+      - 可管理性
+  - 考虑多方涉众
+  - 检查性思维
+  - 识别矛盾划定优先级
+  - 严格程度符合领域与规模特点
 - 确定关键功能
 
 #### 4.1.4、异常处理统一规范：
