--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -262,7 +262,13 @@ IP地址子网掩码判断：
 
 
 
+### 路由器
 
+ip route-static 192.168.3.1 255.255.255.0 192.168.4.1
+
+ip route-static 192.168.3.254 255.255.255.0 192.168.4.1
+
+ip route-static 192.168.4.254 255.255.255.0 192.168.3.1
 
 ### 域名
 定级域名 296
