--- a/安全/安全.md
+++ b/安全/安全.md
@@ -650,3 +650,9 @@ IPSEC  t提供了夸lan的zh专用和公用的wan，以及Internet的  安全通
 
 - ESP 
   - 不加密头部
+- 隧道模式
+  - 隧道模式 隧道模式封装整个IP包， 保证原来的IP包在网络传输中不被篡改
+
+
+访问控制：
+  - 
