--- a/安全/安全.md
+++ b/安全/安全.md
@@ -658,3 +658,9 @@ IPSEC  t提供了夸lan的zh专用和公用的wan，以及Internet的  安全通
   -  阻止非法用户进入系统
   -  允许合法用户进入系统
   -  使合法用户按其权限进入系统进行各种信息活动
+
+访问控制建立的主要依据：
+  - 主体 是对目标进行访问的实体，他可以是用户、用户组、终端
+  - 客体 是一个可以接受访问和受控的实体。可以是数据文件，一个程序或一个数据库
+  - 接入权限
+  
