--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -136,7 +136,12 @@ NCP即网络控制协议，用于建立和配置网络层协议
 
 
 
+### 组播协议：
 
+PIM（Protocol Independent Multicast）协议是一种IP组播协议，它可以在不同的网络层协议上实现组播功能。PIM协议的主要作用是构建组播树，以便将组播数据从源主机传递到所有需要接收数据的主机。
+
+PIM协议有两种模式：PIM Sparse Mode（PIM-SM）和PIM Dense Mode（PIM-DM）。PIM-SM是一种基于源的协议，它会动态地构建组播树来传递组播数据。PIM-DM是一种基于接收者的协议，它会将组播数据在整个网络中广播，直到所有需要接收数据的主机都接收到了数据为止。
+ 
 
 ### 数据帧
 
