--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -141,7 +141,20 @@ NCP即网络控制协议，用于建立和配置网络层协议
 PIM（Protocol Independent Multicast）协议是一种IP组播协议，它可以在不同的网络层协议上实现组播功能。PIM协议的主要作用是构建组播树，以便将组播数据从源主机传递到所有需要接收数据的主机。
 
 PIM协议有两种模式：PIM Sparse Mode（PIM-SM）和PIM Dense Mode（PIM-DM）。PIM-SM是一种基于源的协议，它会动态地构建组播树来传递组播数据。PIM-DM是一种基于接收者的协议，它会将组播数据在整个网络中广播，直到所有需要接收数据的主机都接收到了数据为止。
- 
+ 在PIM-SM模式下，PIM协议使用的是一种叫做“贪婪算法”的机制。当一个主机需要接收组播数据时，它会向网络中发送一个加入请求，然后PIM协议会自动选择一个最优路径来传递组播数据。PIM协议会构建一棵组播树，以便将组播数据从源主机传递到所有需要接收数据的主机。
+
+在PIM-DM模式下，PIM协议会将组播数据在整个网络中广播，直到所有需要接收数据的主机都接收到了数据为止。这种模式适用于网络中的接收者比较密集的情况。但是，由于它会将组播数据广播到整个网络中，所以会导致网络负载较大。
+ PIM-SM
+
+#### 定义
+
+- PIM稀疏模式：适用于任何规模的网络
+- 采取拉的方式，根据接收者的需求，在组播接收者和组播源之间建立组播分发树
+- 无论网段中的IGMP协议是什么版本，都通过Hello报文选举查询器
+
+#### 邻居发现机制
+
+- 与PIM-DM相同
 
 ### 数据帧
 
