--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -144,7 +144,21 @@ PIM协议有两种模式：PIM Sparse Mode（PIM-SM）和PIM Dense Mode（PIM-DM
  在PIM-SM模式下，PIM协议使用的是一种叫做“贪婪算法”的机制。当一个主机需要接收组播数据时，它会向网络中发送一个加入请求，然后PIM协议会自动选择一个最优路径来传递组播数据。PIM协议会构建一棵组播树，以便将组播数据从源主机传递到所有需要接收数据的主机。
 
 在PIM-DM模式下，PIM协议会将组播数据在整个网络中广播，直到所有需要接收数据的主机都接收到了数据为止。这种模式适用于网络中的接收者比较密集的情况。但是，由于它会将组播数据广播到整个网络中，所以会导致网络负载较大。
- PIM-SM
+
+#### PIM-DM
+
+#### 定义
+
+- PIM密集模式
+- 假定网络中组播接收者较多，且分部于大部分设备上，采用推的方式分发组播数据
+- 适用于小规模组播网络
+
+#### 邻居发现机制
+
+- PIM路由器之间周期性发送Hello报文来发现、建立和维护邻居关系
+- 如网段中IGMP版本是v1，则Hello报文可以选举查询器
+
+####  PIM-SM
 
 #### 定义
 
