--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -155,5 +155,9 @@ decodeURIComponent(param.split('=')[1].replace(/%20/g, '+')
     // }
 ```
 
+### 5.vue-video-player
 
+有时候使用上面的操作切换了视频流地址，但是**视频画面仍然不会变** （卡住），
+解决方法就是改变 `v-if` 为 **false** ，再改变为 **true**（在nextTick里） 将 `video-player` 先销毁再重建。
 
+看到另一种解决方法是直接更改该组件的 `key` 触发重新渲染，大家也可以尝试下
