--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -161,3 +161,21 @@ decodeURIComponent(param.split('=')[1].replace(/%20/g, '+')
 解决方法就是改变 `v-if` 为 **false** ，再改变为 **true**（在nextTick里） 将 `video-player` 先销毁再重建。
 
 看到另一种解决方法是直接更改该组件的 `key` 触发重新渲染，大家也可以尝试下
+
+
+
+1.截取视频帧
+
+   let vd=  document.querySelector("video");
+
+​    const canvas = document.getElementById("canvas")
+
+​    canvas.width =  160
+
+​    canvas.height = 160
+
+​    canvas.getContext("2d").drawImage(vd, 0, 0, canvas.width, canvas.height);
+
+​     // 转换成base64形式
+
+​     const img = canvas.toDataURL("image/jpeg") // 这个就是图片的base64
