--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -134,7 +134,15 @@ NCP即网络控制协议，用于建立和配置网络层协议
 
 ### OSPF 协议
 
+在OSPFv2中，收到类型未知的LSA将直接丢弃。
 
+OSPFv3在LSA的LS Type字段中增加了一个U比特位来位标识对未知类型LSA的处理方式：     
+
+  U 比特置 1，则对于未知类型的 LSA 按照 LSA 中的 LS Type 字段描述的泛洪范围进行泛洪                                              U 比特置 0，对于未知类型的 LSA 仅在链路范围内泛洪   
+
+LSA的泛洪范围已经被明确地定义在LSA的LS Type字段，目前，有三种LSA泛洪范围：
+
+ 链路本地范围(Link-local Scope)：LSA 只在本地链路上泛洪，不会超出这个范围， Link-LSA(新增)                                              区域范围(Area Scope)：Router-LSA, Network-LSA, Inter-Area-Prefix-LSA, Inter-Area-Router-LSA, Intra-Area-Prefix-LSA(新增)都是区域范围泛洪的 LSA。                                              自治系统范围(AS Scope)：LSA 将被泛洪到整个路由域，AS-External-LSA
 
 ### 组播协议：
 
