--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -80,6 +80,8 @@ DIS和DR与所路由器互相都是邻接关系
 
 
 
+
+
 # BGP
 
 BGP是一种另外的网关协议，可以做到路由优选、避免路由环路、更高效率传递路由和维护大量的路由信息。
@@ -128,6 +130,20 @@ BGP对等体分类：BGP对等体可以按照两个路由器是否AS相同，分
 - 流量控制
 - 差错控制
 - 拥塞控制
+
+
+
+#### 数据帧和IP报文
+
+以太网帧最短帧长度为64Byte（字节）、最长1518Byte，当超过1518Byte之后的数据帧就需要进行一个分片处理。
+
+以太网帧所占用的长度为：DMAC+SMAC+Type+FCS=18Byte。
+
+已知最短帧长为64Byte，减去以太网18Byte之后就说明Date字段封装内容最短需要有46Byte。
+
+
+
+
 
 ### PPP 协议
 
