--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -141,9 +141,18 @@ BGP对等体分类：BGP对等体可以按照两个路由器是否AS相同，分
 
 已知最短帧长为64Byte，减去以太网18Byte之后就说明Date字段封装内容最短需要有46Byte。
 
+46Byte中还包含着IP报头与TCP或UDP报头：
 
+- 46Byte减去IP报头的20Byte=`26Byte`
+- 当内部封装TCP时：26Byte减去TCP报头20Byte=`6Byte`
+- 当内部封装UDP时：26Byte减去UDP报头8Byte=`18Byte`
 
+##### 如果数据包大小大于1518Byte，我强制不分片会怎样？
 
+ 会禁止发送该不正常的数据包。
+
+为什么数据包需要分片呢？
+ 因为有MTU（最大传输单元）限制，网络设备限制最大传输的MTU大小为1500Byte（此处的1500Byte指的是以太网中Data字段大小限制在1500Byte内），超过MTU值的数据包就需要进行分片，将数据包分成小于/等于MTU值大小的数据分片，到了目的地再组装起来
 
 ### PPP 协议
 
