--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -376,3 +376,54 @@ vhosts拒绝guest用户。
 将项目中的配置改为"/"即可
 
 ## 8.参考资料
+
+
+
+
+
+# 数据库中间件 mycat
+
+1.安装
+
+2.启动
+
+
+
+linux启动命令
+
+```
+cd mycat/bin
+./mycat start
+./mycat status
+./mycat start 启动
+./mycat stop 停止
+./mycat console 前台运行
+./mycat install 添加到系统自动启动（暂未实现）
+./mycat remove 取消随系统自动启动（暂未实现）
+./mycat restart 重启服务
+./mycat pause 暂停
+./mycat status 查看启动状态
+```
+
+windows 启动命令
+
+```
+cd mycat/bin
+#PowerShell
+./mycat install
+./mycat start
+./mycat status
+#CMD
+ 
+mycat install
+mycat start
+mycat status
+```
+
+登录 mycat 
+
+```
+mysql -uroot -P8066 -p
+
+```
+
