--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -422,6 +422,35 @@ mycat status
 
 登录 mycat 
 
+
+
+ 需要修改配置文件 ：mycat\conf\datasources\prototypeDs.datasource.json
+
+```
+{
+	"dbType":"mysql",
+	"idleTimeout":60000,
+	"initSqls":[],
+	"initSqlsGetConnection":true,
+	"instanceType":"READ_WRITE",
+	"maxCon":1000,
+	"maxConnectTimeout":3000,
+	"maxRetryCount":5,
+	"minCon":1,
+	"name":"prototypeDs",
+	### 需要修改此密码，否则不能访问对应的mysql 数据库
+	"password":"root",
+	"type":"JDBC",
+	"url":"jdbc:mysql://localhost:3306/mysql?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8",
+	"user":"root",
+	"weight":0
+}
+```
+
+
+
+默认密码123456
+
 ```
 mysql -uroot -P8066 -p
 
