--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -478,6 +478,21 @@ ip route-static 192.168.3.254 255.255.255.0 192.168.4.1
 
 ip route-static 192.168.4.254 255.255.255.0 192.168.3.1
 
+华为路由器
+
+```
+查看路由表
+
+display ip routing-table
+显示mac 地址
+display mac-address
+
+```
+
+
+
+
+
 ### 域名
 定级域名 296
 
