--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -520,7 +520,7 @@ vlan是二层概念，vlan互通需要三层通信，vlanif应被配置在这个
 二层交换机和三层交换机相连的端口属性要设置为Trunk且运行所有vlan通过；
 
 一、Access
-Access只能属于一个vlan，一般用来连接计算机的端口
+Access只能属于一个vlan，一般用来连接计算机的端口 
 Access接受和转发的数据包必是无VID的数据包
 Access端口发送出去的数据包无VID，可被PC接受或access口接受。
 Access : 收到一个报文，先判断是否有vlan消息，无则打上端口的PVID在SW内转交给相同PVID的端口去掉标记的无VID数据包，有则直接丢弃。
@@ -536,6 +536,19 @@ access口发送数据包时对所有数据包去除VID，而trunk口只对与自
 
 PVID英文为Port-base VLAN ID，是表示网络通信中基于端口的VLAN ID，一个端口可以属于多个VLAN，但是只能有一个PVID，收到一个不带tag头的数据包时，会打上PVID所表示的VLAN号，视同该VLAN的数据包处理。
 
+```
+# 创建vlan   
+vlan 10
+#  设置vlan 类型
+port link-type access
+# 添加网口到vlan
+
+port default vlan 10
+```
+
+局域网不同网段组件方式：
+
+两个二层交换机，一个三层交换机
 
 
 ## 交换机
