--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -549,7 +549,28 @@ port default vlan 10
 局域网不同网段组件方式：
 
 两个二层交换机，一个三层交换机
+在三层交换机上设置vlan 并在vlan 中添加ip 为网关，网关ip为二层互联的同网段ip 一般为254 或者1
 
+
+三层交换机开启dhcp
+```
+# 开启dhcp
+
+dhcp enable 
+# 创建地址池
+ip policy-based-route
+
+ip pool poolname 
+# 配置网络段和子网掩码
+network 192.168.1.0 mask 255.255.255.0 
+gateway-list 192.168.1.254
+
+# 设置 dns
+dns-list 114.114.114.114
+
+# 如果是华为的设备 配置地址池之后仍然无法自动获取 ip 则需要在vlan 端开启配置
+dhcp select global
+```
 
 ## 交换机
 
