--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -570,6 +570,8 @@ dns-list 114.114.114.114
 
 # 如果是华为的设备 配置地址池之后仍然无法自动获取 ip 则需要在vlan 端开启配置
 dhcp select global
+排除ip不分配
+excluded-ip-address  192.168.1.3 
 ```
 
 ## 交换机
