--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -385,6 +385,10 @@ vhosts拒绝guest用户。
 
 1.安装
 
+http://dl.mycat.org.cn/2.0/install-template/   下载安装server
+
+
+
 2.启动
 
 
@@ -449,7 +453,7 @@ mycat status
 
 
 
-默认密码123456
+默认密码123456 ，可以在conf/users/root.user.json  中查看
 
 ```
 mysql -uroot -P8066 -p
@@ -459,6 +463,111 @@ mysql -uroot -P8066 -p
 实现原理：
 
 mycat 实现依赖于mysql的主从复制。
+
+
+
+## 配置读写分离
+
+### 1.创建数据源
+
+首先创建读写的数据源("instanceType":"READ_WRITE",)
+
+```
+/*+ mycat:createDataSource{
+  "dbType":"mysql",
+  "idleTimeout":60000,
+  "initSqls":[],
+  "initSqlsGetConnection":true,
+  "instanceType":"READ_WRITE",
+  "maxCon":1000,
+  "maxConnectTimeout":3000,
+  "maxRetryCount":5,
+  "minCon":1,
+  "name":"m1",
+  "password":"root",
+  "type":"JDBC",
+  "url":"jdbc:mysql://192.168.99.127:3306?useUnicode=true&serverTimezone=UTC&characterEncoding=UTF-8",
+  "user":"root",
+  "weight":0
+} */;
+
+```
+
+创建读的数据源("instanceType":"READ",)
+
+```
+
+/*+ mycat:createDataSource{
+  "dbType":"mysql",
+  "idleTimeout":60000,
+  "initSqls":[],
+  "initSqlsGetConnection":true,
+  "instanceType":"READ",
+  "maxCon":1000,
+  "maxConnectTimeout":3000,
+  "maxRetryCount":5,
+  "minCon":1,
+  "name":"m1s1",
+  "password":"root",
+  "type":"JDBC",
+  "url":"jdbc:mysql://192.168.99.118:3306?useUnicode=true&serverTimezone=UTC&characterEncoding=UTF-8",
+  "user":"root",
+  "weight":0
+} */;
+
+```
+
+查询数据源
+
+```
+/*+ mycat:showDataSources{} */
+```
+
+
+
+### 2.创建集群
+
+​	
+
+```
+/*! mycat:createCluster{
+  "clusterType":"MASTER_SLAVE",
+  "heartbeat":{
+    "heartbeatTimeout":1000,
+    "maxRetry":3,
+    "minSwitchTimeInterval":300,
+    "slaveThreshold":0
+  },
+  "masters":[
+    "m1"
+  ],
+  "maxCon":2000,
+  "name":"prototype",
+  "readBalanceType":"BALANCE_ALL",
+  "replicas":[
+    "m1s1"
+  ],
+  "switchType":"SWITCH"
+} */;
+
+```
+
+
+
+查询集群
+
+```
+/*+ mycat:showClusters{} */
+```
+
+### 创建逻辑库，为其配置集群
+
+```
+CREATE DATABASE db1 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;
+
+```
+
+
 
 
 
