--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -387,6 +387,10 @@ vhosts拒绝guest用户。
 
 http://dl.mycat.org.cn/2.0/install-template/   下载安装server
 
+下载mycat 包，下载之后放进 server 解压出来的lib文件夹中几个
+
+http://dl.mycat.org.cn/2.0/1.22-release/mycat2-1.22-release-jar-with-dependencies-2022-10-13.jar
+
 
 
 2.启动
@@ -467,6 +471,8 @@ mycat 实现依赖于mysql的主从复制。
 
 
 ## 配置读写分离
+
+需要先配置 数据库的主从复制
 
 ### 1.创建数据源
 
@@ -560,14 +566,150 @@ mycat 实现依赖于mysql的主从复制。
 /*+ mycat:showClusters{} */
 ```
 
-### 创建逻辑库，为其配置集群
+### 3.创建逻辑库，为其配置集群
 
 ```
 CREATE DATABASE db1 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;
 
+
+
+#创建单表
+CREATE TABLE db1.`travelrecord` (
+  `id` bigint NOT NULL AUTO_INCREMENT,
+  `user_id` varchar(100) DEFAULT NULL,
+  `traveldate` date DEFAULT NULL,
+  `fee` decimal(10,0) DEFAULT NULL,
+  `days` int DEFAULT NULL,
+  `blob` longblob,
+  PRIMARY KEY (`id`),
+  KEY `id` (`id`)
+) ENGINE=InnoDB  DEFAULT CHARSET=utf8 ;
+
+
+
+```
+
+### 4.修改数据源
+
+
+
+```
+vim /mydata/mycat/mycat/conf/schemas/db1.schema.json
+在里面添加，让它指向刚刚创建的name为prototype的集群
+"targetName":"prototype"
+重启mycat
+
+```
+
+### 5.测试读写分离
+
+```
+CREATE TABLE SYS_USER(
+    ID BIGINT PRIMARY KEY,
+    USERNAME VARCHAR(200) NOT NULL,
+    ADDRESS  VARCHAR(500)
+);
+
+
+分别往主库和从库中添加一条数据，要不一样的
 ```
 
 
+
+## 集群搭建
+
+
+
+### mycat操作双主双从
+
+添加数据源
+
+```
+添加M1S2读的数据源
+/*+ mycat:createDataSource{
+  "dbType":"mysql",
+  "idleTimeout":60000,
+  "initSqls":[],
+  "initSqlsGetConnection":true,
+  "instanceType":"READ",
+  "maxCon":1000,
+  "maxConnectTimeout":3000,
+  "maxRetryCount":5,
+  "minCon":1,
+  "name":"m1s2",
+  "password":"123456",
+  "type":"JDBC",
+  "url":"jdbc:mysql://127.0.0.1:3309?useUnicode=true&serverTimezone=UTC&characterEncoding=UTF-8",
+  "user":"root",
+  "weight":0
+} */;
+添加M2的数据源
+/*+ mycat:createDataSource{
+  "dbType":"mysql",
+  "idleTimeout":60000,
+  "initSqls":[],
+  "initSqlsGetConnection":true,
+  "instanceType":"READ_WRITE",
+  "maxCon":1000,
+  "maxConnectTimeout":3000,
+  "maxRetryCount":5,
+  "minCon":1,
+  "name":"m2",
+  "password":"123456",
+  "type":"JDBC",
+  "url":"jdbc:mysql://127.0.0.1:3310?useUnicode=true&serverTimezone=UTC&characterEncoding=UTF-8",
+  "user":"root",
+  "weight":0
+} */;
+添加M2S1的数据源
+/*+ mycat:createDataSource{
+  "dbType":"mysql",
+  "idleTimeout":60000,
+  "initSqls":[],
+  "initSqlsGetConnection":true,
+  "instanceType":"READ",
+  "maxCon":1000,
+  "maxConnectTimeout":3000,
+  "maxRetryCount":5,
+  "minCon":1,
+  "name":"m2s1",
+  "password":"123456",
+  "type":"JDBC",
+  "url":"jdbc:mysql://127.0.0.1:3311?useUnicode=true&serverTimezone=UTC&characterEncoding=UTF-8",
+  "user":"root",
+  "weight":0
+} */;
+
+```
+
+
+
+```
+修改集群配置
+{
+	"clusterType":"MASTER_SLAVE",
+	"heartbeat":{
+		"heartbeatTimeout":1000,
+		"maxRetryCount":0,
+		"minSwitchTimeInterval":300,
+		"showLog":true,
+		"slaveThreshold":0.0
+	},
+	"masters":[
+		"m1","m2"
+	],
+	"maxCon":2000,
+	"name":"prototype",
+	"readBalanceType":"BALANCE_ALL",
+	"replicas":[
+		"m1s1","m1s2","m2s1"
+	],
+	"switchType":"SWITCH"
+}
+
+```
+
+## 分库分表
 
 
 
